--- a/Freizeitpark/Freizeitpark/MainWindow.xaml
+++ b/Freizeitpark/Freizeitpark/MainWindow.xaml
@@ -2,11 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         WindowStartupLocation="CenterScreen"
-        Title="Freizeitpark Simulation" Height="878" Width="1202" Closed="OnClosed" ResizeMode="CanMinimize">
+        Title="Freizeitpark Simulation" Height="658.597" Width="1202" Closed="OnClosed" ResizeMode="CanMinimize">
     <Grid>
         <Label x:Name="lb_cycle" Content="Der Park ist geöffnet!" HorizontalAlignment="Left" Margin="745,10,0,0" VerticalAlignment="Top" Width="138"/>  
-        <ListBox x:Name="lb_personen" HorizontalAlignment="Left" Height="817" Margin="888,31,0,0" VerticalAlignment="Top" Width="296" ItemsSource="{Binding}" ItemTemplate="{DynamicResource BesucherTemplate}"/>
-        <Button x:Name="Start_Button" Content="RELEASE THE KRAKEN!" HorizontalAlignment="Left" Margin="745,816,0,0" VerticalAlignment="Top" Width="138" Click="Start_Button_Click"/>
+        <ListBox x:Name="lb_personen" HorizontalAlignment="Left" Height="611" Margin="888,13,0,0" VerticalAlignment="Top" Width="296" ItemsSource="{Binding}" ItemTemplate="{DynamicResource BesucherTemplate}"/>
+        <Button x:Name="Start_Button" Content="Start" HorizontalAlignment="Left" Margin="745,602,0,0" VerticalAlignment="Top" Width="138" Click="Start_Button_Click"/>
         <Label x:Name="lb_money" Content="Geld:" HorizontalAlignment="Left" Margin="745,41,0,0" VerticalAlignment="Top" Width="138"/>
         <Expander x:Name="achterbahn_expander" Header="Achterbahn" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="293" Width="218">
             <Grid HorizontalAlignment="Left" Height="269" Width="216">
@@ -43,6 +43,8 @@
             </Grid>
         </Expander>
         <Label x:Name="lb_besucher" Content="" HorizontalAlignment="Left" Margin="745,72,0,0" VerticalAlignment="Top" Width="138"/>
+        <Label x:Name="lb_time" Content="" HorizontalAlignment="Left" Margin="745,103,0,0" VerticalAlignment="Top" Width="138"/>
+        <Label x:Name="lb_tage" Content="Tage:" HorizontalAlignment="Left" Margin="745,134,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.474,0.538" Width="138"/>
     </Grid>
     <Window.Resources>
         <DataTemplate x:Key="BesucherTemplate">
